# LifeAlertPlus

./: .dockerignore  .gitignore  LifeAlertPlusClassDiagram.vpp  README.md  docker-compose.yml  documentatie.tex  lifealertplus.code-workspace  roslynator-report.txt
.github/workflows/: Dockerfile.api  Dockerfile.client  ai-deploy.yml  api.yml  client.yml  docker-publish.yml  main_api-lifealertplusiot.yml  nginx.conf  version.yml
LifeAlertPlus/: LifeAlertPlus.sln
LifeAlertPlus/LifeAlertPlus.API/: LifeAlertPlus.API.csproj  LifeAlertPlus.API.http  Program.cs  appsettings.Development.json  appsettings.Production.json  appsettings.json  main.cpp
LifeAlertPlus/LifeAlertPlus.Application/: LifeAlertPlus.Application.csproj
LifeAlertPlus/LifeAlertPlus.Client/: App.razor  AppVersion.cs  LifeAlertPlus.Client.csproj  Program.cs  _Imports.razor
LifeAlertPlus/LifeAlertPlus.Infrastructure/: LifeAlertPlus.Infrastructure.csproj  lifealert.db-shm  (+1 more)
ai-service/: Dockerfile  main.py  model.py  patient_monitor_artifacts (3) (2).joblib  requirements.txt
docs/: capitol6-testare.tex  coperta licenta MI.doc  docker-compose.yml  documentatie-partea1.aux  documentatie-partea1.lof  documentatie-partea1.lot  documentatie-partea1.out  documentatie-partea1.tex  documentatie-partea1.toc  documentatie.aux  documentatie.lof  documentatie.lot  documentatie.out  documentatie.tex  documentatie.toc
firmware/: CMakeLists.txt  LifeAlertPlusESP32.sln  README.md  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
scripts/: find_unused_classes.ps1
(+328 files in other folders)
